<resources>
    <string name="app_name">Hallo Welt!</string>
    <string name="welcome">Willkommen bei</string>
    <string name="subtitle">Kooperation für Integration </string>
    <string name="username">Nutzername</string>
    <string name="email">E-Mail Adresse</string>
    <string name="password">Passwort</string>
    <string name="passwordRepeat">Passwort Wiederholen</string>
    <string name="profile">Profil</string>
    <string name="login">Anmelden</string>
    <string name="logout">Abmelden</string>
    <string name="registerLink">Neu hier? Jetzt registrieren!</string>
    <string name="registerHeader">Jetzt Registrieren</string>
    <string name="finishRegister">Registrierung abschließen</string>
    <string name="visitedLocations">Besuchte Orte</string>
    <string name="overview">Interessante Orte</string>
    <string name="setupExplanation">Diese Activity dient lediglich Setup-Zwecken. Sie befüllt die Datenbank mit hart kodierten Orten. Alle vorhanden Beiträge werden überschrieben!</string>
    <string name="setup">Setup durchführen</string>

    <string name="placeholder">-</string>

    <!-- Locations -->
    <string name="westbad">Westbad</string>
    <string name="westbadDescription">Eines der größten Freizeitbäder Deutschlands. Insgesamt 3.331 m² Wasserfläche</string>
    <string name="neupfarrplatz">Neupfarrplatz</string>
    <string name="neupfarrplatzDescription">Der Neupfarrplatz liegt im Zentrum der Regensburger Altstadt. Ein beliebter Treffpunkt. Hier ist die Neupfarrkirche und man kann teueres Eis kaufen.</string>
    <string name="steinerneBrücke">Steinerne Brücke</string>
    <string name="steinerneBrückeDescription">Die Steinerne Brücke ist neben dem Regensburger Dom das bedeutendste Wahrzeichen der Stadt Regensburg. Mit dem Baubeginn 1135 ist sie die älteste erhaltene Brücke Deutschlands und gilt als ein Meisterwerk mittelalterlicher Baukunst.</string>
    <string name="stpeter">Dom St. Peter</string>
    <string name="stpeterDescription">Der Regensburger Dom ist die bedeutendste Kirche der Stadt Regensburg und Kathedrale des Bistums Regensburg. Er gehört neben dem Kölner Dom zu den bedeutendsten gotischen Kathedralen in Deutschland.</string>
    <string name="jahninsel">Jahninsel</string>
    <string name="jahninselDescription">Die Jahninsel liegt zwischen Regensburg und Stadtamhof unter der Steinernen Brücke. Sie bietet im Sommer viel Platz für Grillparties und die Möglichkeit in der Donau baden zu gehen.</string>
    <string name="dultplatz">Dultplatz</string>
    <string name="dultplatzDescription">Zweimal im Jahr findet ihr das Regensburger Volksfest, die Dult, statt. Neben mehreren Bierzelten und vielen Fahrgeschäften, kann man die Warendult auch zum Shopping nutzen. Während des übrigens Jahres finden hier regelmäßig Flohmärkte statt.</string>
    <string name="donaupark">Donaupark</string>
    <string name="donauparkDescription">Weitläufiges Naherholungsgebiet im Westen der Stadt an der Donau mit Spielplätzen für kleine und größere Kinder. Es gibt auch einen Bolzplatz und eine Halfpipe für Skater. Ein schöner Platz zum Erholen, Spazierengehen, Radeln oder Joggen.</string>
    <string name="sax">Sax</string>
    <string name="saxDescription">Ein Klassiker unter den Bars in Regensburg mit überwiegend studentischem Publikum. Die Getränke sind vergleichsweise günstig, Brettspiele sind ebenfalls vorhanden.</string>

    <string name="spital">Spital</string>
    <string name="spitalDescription">Das St. Katharinenspital und der Spitalgarten sind untrennbar mit dem Wahrzeichen der Stadt Regensburg, mit dem Dom und der Steinernen Brücke, verbunden. Seit seiner Entstehung im Mittelalter braut das Spital für seine Gäste, die Pfründner und das Spitalgesinde, wohlschmeckendes Bier. Die Brauereirechnungen des Spitals lassen sich bis in die Zeit um 1350 zurückverfolgen.</string>
    <string name="rtbad">RT Bad</string>
    <string name="rtbadDescription">Es gibt viel zu entdecken im Wöhrdbad: 50-Meter-Sportbecken, Sprungturm, großes Kinderbecken mit Wasserrutsche, Strömungskanal, Planschbecken mit Wasserpilz für die Kleinsten und ein gut ausgestatteter Abenteuerspielplatz bieten sommerliches Freizeitvergnügen für Groß und Klein.</string>
    <string name="bismarckplatz">Bismarckplatz</string>
    <string name="bismarckplatzDescription">Der Bismarckplatz ist in lauen Sommernächten der perfekte Treffpunkt für Jung- und Alt. Mit den zwei Brunnen fühlt man sich wie im Urlaub und als Erfrischung kann man sich beim Stenz ein Eis oder Bier holen. </string>
    <string name="stenz">Stenz</string>
    <string name="stenzDescription">“Mogst a Eis, Spatzl?” - der Stenz am Bismarckplatz ist wohl die bekannteste Eisdiele der Stadt mit super leckerem Eis. </string>
    <string name="bar13">13</string>
    <string name="bar13Description">Eine gemütliche Bar ist zum Beispiel die Bar 13 - Montags ist dort Karaoke angesagt!</string>
    <string name="orangeBar">Orange Bar</string>
    <string name="orangeBarDescription">Die fast direkt an der Donau gelegene Orange Bar mit gemütlichem Innenhof ist ein guter Ort, um Leute zu treffen und kennen zu lernen.</string>
    <string name="kneitinger">Kneitinger</string>
    <string name="kneitingerDescription">Bayerische Küche und Kultur kann man im Kneitinger am Arnulfsplatz genießen. </string>

    <string name="msgPasswordMatch">Passwörter stimmen nicht überein!</string>
    <string name="msgInvalidEmail">Ungültige E-Mail Adresse!</string>
    <string name="msgRequiredField">ist ein Pflichtfeld!</string>
    <string name="title_activity_maps">Map</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="close">Schließen</string>
    <string name="achievementUnlocked">Erfolg freigeschaltet</string>
    <string name="achievements">Erfolge</string>

</resources>
