<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textSize="15sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_below="@id/loginHeader"
        android:layout_marginTop="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"

            >
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorAccent"
                android:text="@string/login" />
        </RelativeLayout>



        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerLink"
            android:textAlignment="center"
            android:layout_marginTop="30sp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <de.ur.fischermeierhoeferpeiser.hallowelt.aue.hallowelt.helpers.Loader
        android:id="@+id/loginLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>