<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ProfileActivity"
    android:orientation="vertical"
    >

    <TableLayout
        android:id="@+id/tlUserInfo"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:stretchColumns="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="10sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/username"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/tvProfileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/placeholder"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/email"
                android:layout_column="1"
                />

            <TextView
                android:id="@+id/tvProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:layout_column="2"
                />

        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_below="@id/tlUserInfo"
        android:id="@+id/rlVisitedLocationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvVisitedLocationsHeader"
            android:text="@string/visitedLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <TextView
            android:layout_below="@id/tvVisitedLocationsHeader"
            android:text="@string/placeholder"
            android:id="@+id/tvVisitedLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <de.ur.fischermeierhoeferpeiser.hallowelt.aue.hallowelt.helpers.Loader
        android:id="@+id/profileLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>